testcase/istio/gateway-tls/manifest.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hello-tls-gateway
  namespace: pilotwave-istio-demo
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: pilotwave-hello-tls
      hosts:
        - hello-tls.pilotwave.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-tls
  namespace: pilotwave-istio-demo
spec:
  hosts:
    - hello-tls.pilotwave.local
  gateways:
    - hello-tls-gateway
  http:
    - name: route-to-v1
      route:
        - destination:
            host: hello.pilotwave-istio-demo.svc.cluster.local
            subset: v1
            port:
              number: 80
          weight: 100
